Fixbug and others.

--- a/TCRB.DAL/efpt.config.json
+++ b/TCRB.DAL/efpt.config.json
@@ -23,7 +23,7 @@
    ],
    "UseDatabaseNames": true,
    "UseDbContextSplitting": false,
-   "UseFluentApiOnly": true,
+   "UseFluentApiOnly": false,
    "UseHandleBars": false,
    "UseInflector": false,
    "UseLegacyPluralizer": false,
