--- a/TCRB.BLL/TCRB.BLL.csproj
+++ b/TCRB.BLL/TCRB.BLL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
