--- a/TCRB.WEB/nlog.config
+++ b/TCRB.WEB/nlog.config
@@ -24,9 +24,9 @@
 
   <!-- rules to map from logger name to target -->
   <rules>
-    <logger name="*" writeTo="allfile" />
-    <!--<logger name="*" minlevel="Debug" writeTo="allfile"/>-->
-    <!--<logger name="*" minlevel="Info" writeTo="allfile"/>-->
-    <!--<logger name="*" minlevel="Error" writeTo="allfile"/>-->
+    <!--<logger name="*" writeTo="allfile" />-->
+    <logger name="*" levels="Info,Error" writeTo="allfile"/>
+    <!--<logger name="*" levels="Debug" writeTo="allfile"/>-->
+    <!--<logger name="*" levels="Error" writeTo="allfile"/>-->
   </rules>
 </nlog>
